--- a/main.css
+++ b/main.css
@@ -1,3 +1,17 @@
+#red {
+  border-top-color: #f00;
+    }
+
+#orange {
+   border-top-color: #ffa500; 
+    }
+
+#yellow {
+    order-top-color: #ff0
+}
+
+
+
 div {
   border: 20px solid #000; /* this is short hand for setting
                             the border's width, its type, and color */
@@ -8,4 +22,4 @@ div {
   border-left-color: transparent; /* these remove the color from the left side */
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
-}
+    }
