automatically backed up by learn

--- a/main.css
+++ b/main.css
@@ -15,9 +15,12 @@
 }
 
 #blue {
-  border-top-color: 
+  border-top-color: #06f;
 }
 
+#indigo {
+  border-top-color: 
+}
 div {
   border: 20px solid #000; /* this is short hand for setting
                             the border's width, its type, and color */
